--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ GAM-300-Prototype/Logs/AssetImportWorker1-prev.log
 GAM-300-Prototype/Logs/AssetImportWorker1.log
 GAM-300-Prototype/Logs/AssetImportWorker4-prev.log
 GAM-300-Prototype/Logs/AssetImportWorker5-prev.log
+GAM-300-Prototype/.idea/
